docs/7.52/md/abenabap_message_http_server.md
---
title: "Messages in ICF Processing"
description: |
  Messages sent during ICF processing(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenicf_processing_glosry.htm 'Glossary Entry') (namely when a HTTP/HTTPS query or SMTP query is handled by a HTTP request handler(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenicf.htm
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_message_http_server.htm"
abapFile: "abenabap_message_http_server.htm"
keywords: ["do", "if", "try", "data", "types", "abenabap", "message", "http", "server"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Text Repositories](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_texts.htm) →  [Messages](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_messages.htm) →  [Behavior of Messages](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_messages_types.htm) → 

Messages in ICF Processing

Messages sent during [ICF processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenicf_processing_glosry.htm "Glossary Entry") (namely when a HTTP/HTTPS query or SMTP query is handled by a [HTTP request handler](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenicf.htm)) behave in the same way as in [RFC processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_message_rfc.htm). Programs or procedures called in the handler are executed in the service context and their messages behave accordingly.

Note

[Dialog processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_message_dialog.htm) or [list processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_message_list_processing.htm) can only take place for an ICF server if the Service Data → GUI Link setting for the service is set to "Yes" in the transaction SICF. Messages of the types "I", "S", and "W" are always ignored by default and messages of the types "A", "E", and "X" always terminate processing followed by a [database rollback](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendatabase_rollback_glosry.htm "Glossary Entry").